...
                android:id="@+id/balanceWebView"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/makePaymentButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Make Payment" />

            <Button
                android:id="@+id/mortageRequestButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Expense Report" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Logout" />
        </LinearLayout>
...
